Hole boring theory

--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -98,6 +98,7 @@
 \usepackage{booktabs}
 
 \renewcommand{\arraystretch}{1.3}
+\DeclareMathOperator{\sech}{sech}
 
 % To make text superscripts shortcuts
 	\renewcommand{\th}{\textsuperscript{th}} % ex: I won 4\th place
