--- a/text/ch3-orion.tex
+++ b/text/ch3-orion.tex
@@ -53,9 +53,9 @@ Integrating equation \ref{eq:v_HB},
 
 At the peak of the main pulse,
 \begin{equation}
-	x_\mathrm{i}(y) = \Pi a_0ce^{-\frac{y^2}{w_L^2}} G,
+	x_\mathrm{i}(y) = \Pi a_0ce^{-\frac{y^2}{2w_L^2}} G,
 \end{equation}
-where $G = \int_\infty^{t_0} g(t-t_0) \mathrm{d} t \sim t_\mathrm{p}$, where $t_\mathrm{p}$ is the pulse duration.
+where $G = \int_\infty^{t_0} g(t-t_0) \mathrm{d} t \sim t_\mathrm{p}$ and $t_\mathrm{p}$ is the pulse duration.
 
 The total denting is a combination of the peak electron-ion charge separation, $x_\mathrm{e}$ (which leads to the intrinsic phase imprint on the HHG beam) and equation \ref{eq:xi_t}. Note that for the long pulse duration of the ORION laser, $x_\mathrm{i} \gg x_\mathrm{e}$ and therefore $x_\mathrm{e}$ can be neglected.
 
